Fix scrolling on iOS

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -25,6 +25,7 @@ html, body {
   width: 100%;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
